--- a/OnlineExam/Views/Exam/EditExam.cshtml
+++ b/OnlineExam/Views/Exam/EditExam.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<form method="post">
+<form asp-controller="Exam" asp-action="EditExam">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">
@@ -11,13 +11,17 @@
             <hr />
         </div>
         <div class="mb-3">
+            <input asp-for="ExamId" hidden/>
+
             <label asp-for="Title"></label>
             <input asp-for="Title" class="form-control" />
 
             <label asp-for="Duration"></label>
             <input asp-for="Duration" class="form-control" />
 
-            <input asp-for="ExamId" hidden/>
+            <input asp-for="AddedAt" hidden/>
+            <input asp-for="StartTime" hidden/>
+            <input asp-for="EndTime" hidden/>
 
             <input asp-for="ApplicationUserId" hidden/>
 
