--- a/OnlineExam/Views/Exam/Index.cshtml
+++ b/OnlineExam/Views/Exam/Index.cshtml
@@ -28,9 +28,7 @@
                 string ActionName = EndTime > CurTime ? "ViewQuestions" : "ViewResults";
                 var ExamId = @x.ExamId.ToString();
                 <li>
-                    <a class="Examitem" asp-controller="Exam"
-                       asp-action="@ActionName"
-                       asp-route-Id="@x.ExamId">
+                    <a class="Examitem" asp-controller="Exam" asp-action="@ActionName" asp-route-Id="@x.ExamId">
                         <p>@x.Title</p>
 
                         <p>
@@ -40,7 +38,8 @@
                         <p>@x.StartTime</p>
                         <p id="@ExamId"></p> <!-- Remove the script block here -->
                     </a>
-                    <a onclick="show_more_menu(event)" asp-controller="Exam" asp-action="Delete" asp-route-id="@x.ExamId" class="btn btn-danger ">
+                    <a onclick="show_more_menu(event)" asp-controller="Exam" asp-action="Delete" asp-route-id="@x.ExamId"
+                        class="btn btn-danger ">
                         <span class="icon"><i class="fa fa-trash"></i></span>
                         <script>
                             function show_more_menu(e) {
@@ -66,7 +65,7 @@
                             document.getElementById("@ExamId").innerHTML = "PASSED";
                         }
                     }, 1000);
-                    console.log(@curIdx);
+                    @* console.log(@curIdx); *@
                 </script>
                 curIdx++;
             }
@@ -75,83 +74,6 @@
 </div>
 
 
-<style>
-
-    .listOfItem li {
-        width: 100%;
-        gap: 119px;
-        display: inline-flex;
-        border-bottom: 1px solid #D9D9D9;
-        align-items: center;
-    }
-
-    .Examitem {
-        gap: 115px;
-        display: inline-flex;
-        align-items: center;
-        padding-top: 4px;
-        padding-left: 41px;
-    }
-
-    .listOfItem li:hover {
-        background: #f7f4f4
-    }
-
-    .listOfItem li p {
-        font-size: 14px;
-        font-weight: 500;
-        color: #000000;
-        align-items: center;
-    }
-
-    .table-titles {
-        height: fit-content;
-        width: 100%;
-        background: #D9D9D9;
-        display: flex;
-        text-align: center;
-        gap: 144px;
-        position: relative;
-    }
-
-        .table-titles p {
-            margin-top: 22px;
-            vertical-align: middle;
-            margin-left: 39px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            font-size: 18px;
-        }
-
-    .items p {
-        width: 122px;
-        display: inline;
-    }
-
-    .top-section {
-        height: 220px;
-        width: 100%;
-        background-color: white;
-        text-align: center;
-    }
-
-    .top-section h2 {
-        line-height: 1.5;
-        display: inline-block;
-        margin-top: 95px;
-        font-weight: 600;
-    }
-
-    .top-section img {
-        width: 190px;
-        height: 190px;
-        float: right;
-        margin-top: 24px;
-        margin-right: 32px;
-    }
-
-    .bottom-section {
-        height: fit-content;
-        width: 100%;
-    }
-
-</style>
+@section PageStyle {
+    <link rel="stylesheet" href="~/css/ExamIndex.css">
+}
