--- a/OnlineExam/Views/Exam/CreateExam.cshtml
+++ b/OnlineExam/Views/Exam/CreateExam.cshtml
@@ -5,6 +5,7 @@
 }
 
 <form asp-controller="Exam" asp-action="CreateExam" id="exam-form">
+    @* <div class="divdanger" asp-validation-summary="All"></div> *@
     <div class="container">
         <p>Create New Exam</p>
         <div class="exam-container">
@@ -20,8 +21,6 @@
                 <label asp-for="StartTime"></label>
                 <input asp-for="StartTime" class="form-control" required />
             </div>
-
-            <input type="hidden" asp-for="ApplicationUserId" />
 
             <button id="my-btn" type="submit" class="btn btn-primary">Save</button>
 
