--- a/OnlineExam/Views/Exam/EditQuestion.cshtml
+++ b/OnlineExam/Views/Exam/EditQuestion.cshtml
@@ -59,94 +59,6 @@
     </div>
 </form>
 
-<style>
-    .question-container {
-        padding: 16px 16px 16px 32px;
-        margin-left: 32px;
-        background: #D9D9D9;
-        border-radius: 18px;
-        margin-bottom: 24px;
-        width: fit-content;
-    }
-
-    .custome-form {
-        gap: 14px;
-        display: grid;
-    }
-
-    .custome-textarea {
-        border: 1px solid black;
-        border-radius: 8px;
-        width: 761px;
-        min-width: 96px;
-        font-size: 16px;
-        font-weight: 500;
-        min-height: 26px;
-    }
-
-    .answer-container p {
-        font-weight: 600;
-        font-size: 16px;
-        margin: 0;
-    }
-
-    .answer-container {
-        display: flex;
-        flex-wrap: nowrap;
-        gap: 8px;
-        align-items: center;
-    }
-
-    .checked-answer {
-        transform: scale(1.5);
-    }
-
-    .custome-btn {
-        width: 132px;
-    }
-
-    .btn-container {
-        display: flex;
-        justify-content: center;
-    }
-</style>
-@*
-<form method="post">
-
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">
-                Add New Exam
-            </h2>
-            <hr />
-        </div>
-        <div class="mb-3">
-
-            <label asp-for="Head"></label>
-            <input asp-for="Head" class="form-control" />
-
-            <label asp-for="a"></label>
-            <input asp-for="a" class="form-control" />
-
-            <label asp-for="b"></label>
-            <input asp-for="b" class="form-control" />
-
-            <label asp-for="c"></label>
-            <input asp-for="c" class="form-control" />
-
-            <label asp-for="d"></label>
-            <input asp-for="d" class="form-control" />
-
-            <label asp-for="ExamId"></label>
-            <input asp-for="ExamId" class="form-control" value="@Model.ExamId" />
-
-            <label asp-for="QuestionId"></label>
-            <input asp-for="QuestionId" class="form-control" value="@Model.QuestionId" />
-
-        </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a asp-action="ViewQuestions" asp-controller="Exam" asp-route-Id="@Model.ExamId" class="btn btn-secondary">
-            back to Questions
-        </a>
-    </div>
-</form>*@
+@section PageStyle {
+    <link rel="stylesheet" href="~/css/ExamEditQuestion.css">
+}
