--- a/OnlineExam/Views/StudentAnswer/Index.cshtml
+++ b/OnlineExam/Views/StudentAnswer/Index.cshtml
@@ -1,10 +1,13 @@
 ﻿@model StudentInfo
 
 
-<form asp-controller="StudentAnswer" asp-action="AddAnswer" 
-method="post" class="conatiner-container">
+<form asp-controller="StudentAnswer" asp-action="AddAnswer" method="post" class="conatiner-container">
     <div class="container">
 
+        @* @if (Model.Submit == true)
+        {
+            <span style="color: red;">You Take this exam</span>
+        } *@
         <div class="warning-container">
             <p style="font-size: 22px;font-weight: bold;">Are you ready? there is a few of warnings.</p>
             <ul>
@@ -13,12 +16,12 @@ method="post" class="conatiner-container">
                 </li>
                 <li>
                     <p style="font-size: 18px;">Don't open another tap during exam.</p>
-                 </li>
-                <li>
-                    <p style="font-size: 18px;">If your internet is down during exam of any kind of these 
-                    ,answers you submited so far will be submitted.</p>
                 </li>
-               
+                <li>
+                    <p style="font-size: 18px;">If your internet is down during exam of any kind of these
+                        ,answers you submited so far will be submitted.</p>
+                </li>
+
             </ul>
         </div>
 
@@ -30,14 +33,14 @@ method="post" class="conatiner-container">
             </div>
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" required/>
+                <input asp-for="Name" class="form-control" required />
             </div>
 
-            <input asp-for="ExamId" class="form-control hidden" value="@Model.ExamId"/>
+            <input asp-for="ExamId" class="form-control hidden" value="@Model.ExamId" />
 
             <button type="submit" class="btn btn-primary custome-btn" id="btn-join" disabled>Join Now</button>
         </div>
-        
+
     </div>
     <div class="timeRemaining-container" id="timeRemaining-id">
         <div class="hoursRemaining-container">
@@ -95,51 +98,11 @@ method="post" class="conatiner-container">
             btn.disabled = false;
             return;
         }
-        
+
     }, 1000);
 </script>
-<style>
-    .conatiner-container{
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-    .container {
-        display: flex;
-        justify-content: center;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        max-width: 95%;
-        margin: 56px 0px 0px 62px;
-    }
 
-    .exam-container {
-        padding: 16px 16px 16px 32px;
-        margin-left: 32px;
-        background: #D9D9D9;
-        border-radius: 18px;
-        margin-bottom: 24px;
-        width: 80%;
-        gap: 10px;
-        display: flex;
-        flex-direction: column;
-    }
 
-    .warning-container{
-        margin-top:20px;
-    }
-    
-    .custome-btn{
-        background: #1590A4;
-    }
-
-    .timeRemaining-container {
-        display: flex;
-        gap: 48px;
-    }
-
-    .timeRemaining-container p{
-        font-size:16px;
-        font-weight:600;
-    }
-</style>
+@section PageStyle {
+    <link rel="stylesheet" href="~/css/StudentAnswerIndex.css">
+}
